# caissa

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  about.toml  license.html
src/: argsparse.rs  main.rs  pgn.rs
test/: test01.pgn
