[package]
name = "caissa"
description = "Caissa - A modern chess database format"
authors = [ "datawater" ]
version = "0.0.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30.0", features = ["sqlcipher", "bundled-sqlcipher"] }
lz4_flex = { version = "0.11.2", default-features = false }
pgn-reader = "0.25.0"
shakmaty = "0.26.0"
version = "3.0.0"

[profile.dev]
opt-level = 1
lto = true
codegen-units = 2048

[profile.release]
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = true
codegen-units = 1

[profile.bolt]
inherits = "release"
opt-level = 3
strip = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = true
codegen-units = 1
